--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "@prisma/client": "^5.17.0",
     "@types/ejs": "^3.1.5",
     "@types/nodemailer": "^6.4.15",
+    "@types/socket.io": "^3.0.2",
+    "@types/stripe": "^8.0.417",
+    "axios": "^1.7.5",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
@@ -16,6 +19,8 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "prisma": "^5.17.0",
+    "socket.io": "^4.8.0",
+    "stripe": "^16.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "zod": "^3.23.8"
@@ -31,13 +36,18 @@
   },
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon"
+    "start": "npx nodemon",
+    "build": "tsc"
   },
   "keywords": [],
+  "engines": {
+    "node": "18.x"
+  },
   "author": "",
+  "type": "commonjs",
   "license": "ISC",
   "description": ""
 }
