--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "name": "server",
   "version": "1.0.0",
-  "main": "build/index.js",
+  "main": "build/app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon",
