just change router

--- a/package.json
+++ b/package.json
@@ -36,11 +36,10 @@
   },
   "name": "server",
   "version": "1.0.0",
-  "main": "build/app/index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon",
-    "build": "tsc"
+    "start": "npx nodemon"
   },
   "keywords": [],
   "engines": {
